# cgj-clicker

./: .env.example  README.md  pyproject.toml
src/cgjclicker/: __init__.py  __main__.py  bot.py  cli.py
