[project]
name = "cgjclicker"
version = "0.1.0"
description = "Energy Game Bot for Code Game Jam - Automates the clicking game"
readme = "README.md"
authors = [{ name = "Starmania", email = "wycvhrt6vzscfpedxr@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.24.0", "click>=8.1.0"]

[project.scripts]
cgjclicker = "cgjclicker.cli:cli"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
